...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due June 17, 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSR-Oq-hca">
                                <rect key="frame" x="4" y="44" width="382" height="21"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                <color key="textColor" name="inverse"/>
                                <nil key="highlightedColor"/>
...
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Made &amp; Designed by Mike Veson with inspiration from the original Knight Life" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizing
                                <rect key="frame" x="20" y="91" width="350" height="40.666666666666657"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" name="darkGray"/>
...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fzX-Ny-tnU">
                                <rect key="frame" x="20" y="202.66666666666666" width="350" height="30"/>
                                <state key="normal" title="Press here to go to the feedback sheet"/>
                                <connections>
...
                                </wkWebViewConfiguration>
                            </wkWebView>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cpJ-7A-gBR">
                                <rect key="frame" x="0.0" y="291" width="414" height="571"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                        <outlet property="sideMenuBtn" destination="PxE-M1-upz" id="AZr-0q-UcL"/>
                        <outlet property="webView" destination="hpq-UB-EQL" id="Fwq-Dx-Ljg"/>
                        <segue destination="MnO-c5-Moa" kind="show" identifier="Lunch" id="z0Q-XG-7SA"/>
                        <segue destination="s4w-ik-a74" kind="show" identifier="class" id="hRx-xq-GDf"/>
                    </connections>
...
                            </imageView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fhl-b4-s9d" customClass="GIDSignInButton">
                                <rect key="frame" x="23" y="719" width="344" height="50"/>
                                <color key="backgroundColor" name="white"/>
                                <constraints>
...
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kGI-Pp-iNv">
                                <rect key="frame" x="16" y="65" width="228" height="80"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="google.png" translatesAutoresizingMaskIntoConstraints="NO" id="Jr4-EM-5KH">
...
        <image name="plus" catalog="system" width="128" height="113"/>
        <image name="plus.circle" catalog="system" width="128" height="123"/>
        <image name="vanguardLogo" width="27.666666030883789" height="29"/>
        <image name="x.circle" catalog="system" width="128" height="123"/>
        <namedColor name="background">
...
